--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="output.css">
+    <link rel="stylesheet" href="../src/output.css">
 </head>
 <body>
-        <h1 class="bg-red-300">Heello Tailwind</h1>
+        <h1 class="bg-red-300">Hello Tailwind</h1>
 </body>
 </html>
