--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,11 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Notes</title>
 
-    <link rel="stylesheet" href="../src/output.css">
+    <link rel="stylesheet" href="/src/output.css">
 </head>
 <body>
-        <h1 class="bg-red-300">Hello Tailwind</h1>
+    <nav class="bg-gray-800 text-white p-6 indent-6 text-xl font-mono">Ali-Notes</nav>
+    <div class="container w-full h-screen bg-slate-500 text-white flex items-center justify-center">
+        <div class="content border-2 border-pink-200 w-11/12 h-auto flex flex-wrap items-start justify-start gap-x-14 gap-y-4 p-8">
+            <div class="content border-2 border-violet-500 w-72 h-72">
+                <h4>Title</h4>
+                <p>Content</p>
+            </div>
+            <div class="content border-2 border-violet-500 w-72 h-72">
+                <h4>Title</h4>
+                <p>Content</p>
+            </div>
+            <div class="content border-2 border-violet-500 w-72 h-72">
+                <h4>Title</h4>
+                <p>Content</p>
+            </div>
+
+            <div class="content border-2 border-violet-500 w-72 h-72">
+                <h4>Title</h4>
+                <p>Content</p>
+            </div>
+            <div class="content border-2 border-violet-500 w-72 h-72">
+                <h4>Title</h4>
+                <p>Content</p>
+            </div>
+            <div class="content border-2 border-violet-500 w-72 h-72">
+                <h4>Title</h4>
+                <p>Content</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
