--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,31 +8,35 @@
     <link rel="stylesheet" href="/src/output.css">
 </head>
 <body>
-    <nav class="bg-gray-800 text-white p-6 indent-6 text-xl font-mono">Ali-Notes</nav>
+    <nav class="h-24 bg-gray-800 text-white p-6 indent-6 text-xl font-mono flex justify-between items-center">Ali-Notes
+        <form action="/addNotes" method="get" class="flex place-content-center">
+            <button class=" w-24 h-11 border-2  bg-slate-600 rounded-lg transition ease-in-out delay-150  hover:-translate-y-1 hover:scale-105 duration-300">Add</button>
+        </form>
+    </nav>
     <div class="container w-full h-screen bg-slate-500 text-white flex items-center justify-center">
-        <div class="content border-2 border-pink-200 w-11/12 h-auto flex flex-wrap items-start justify-start gap-x-14 gap-y-4 p-8">
-            <div class="content border-2 border-violet-500 w-72 h-72">
+        <div class="content border-2 border-pink-200 w-11/12 h-screen flex flex-wrap items-start justify-start gap-x-14 gap-y-4 p-8">
+            <div class="content border-2 border-white-500 w-72 h-72">
                 <h4>Title</h4>
                 <p>Content</p>
             </div>
-            <div class="content border-2 border-violet-500 w-72 h-72">
+            <div class="content border-2 border-white-500 w-72 h-72">
                 <h4>Title</h4>
                 <p>Content</p>
             </div>
-            <div class="content border-2 border-violet-500 w-72 h-72">
+            <div class="content border-2 border-white-500 w-72 h-72">
                 <h4>Title</h4>
                 <p>Content</p>
             </div>
 
-            <div class="content border-2 border-violet-500 w-72 h-72">
+            <div class="content border-2 border-white-500 w-72 h-72">
                 <h4>Title</h4>
                 <p>Content</p>
             </div>
-            <div class="content border-2 border-violet-500 w-72 h-72">
+            <div class="content border-2 border-white-500 w-72 h-72">
                 <h4>Title</h4>
                 <p>Content</p>
             </div>
-            <div class="content border-2 border-violet-500 w-72 h-72">
+            <div class="content border-2 border-white-500 w-72 h-72">
                 <h4>Title</h4>
                 <p>Content</p>
             </div>
