--- a/views/Add-Notes.ejs
+++ b/views/Add-Notes.ejs
@@ -6,14 +6,17 @@
     <title>Add Notes</title>
     <link rel="stylesheet" href="/src/output.css">
 </head>
-<body class="bg-slate-500 flex flex-col justify-center items-center h-screen">
+<body class="bg-gray-700 flex flex-col justify-center items-center h-screen">
     <form action="/postNotes" method="post" class="flex flex-col gap-5 justify-start w-96 text-gray-50 mb-2">
-        <label for="title">Title: </label>
-        <input type="text" name="title" class="text-black rounded-md bg-slate-300 h-8">
-        <label for="content">Content: </label>
-        <input type="text" name="content" class="text-black h-52 rounded-xl bg-slate-300 flex justify-start items-start">
-        <button type="submit">Done</button>
+        <label for="title" class="block mb-2 text-lg font-medium text-gray-900 dark:text-white">Title: </label>
+        <input type="text" name="title" class=" indent-2 h-10 text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 dark:bg-gray-800  dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="ex. What to do">
+
+        <label for="content" class="block mb-2 text-lg font-medium text-gray-900 dark:text-white">Content:</label>
+        <textarea id="content" rows="4" class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500  dark:bg-gray-800 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Write your thoughts here..."></textarea>
+        <div class="flex justify-center">
+            <button type="submit" class="h-10 w-28 rounded-lg bg-gray-900 hover:bg-slate-100 hover:text-black">Done</button>
+        </div>
     </form>
-    <form action="/" method="get"><button type="submit">Go Back</button></form>
+    <form action="/" method="get"><button type="submit" class="h-10 w-28 rounded-lg text-white bg-gray-900 hover:bg-slate-100 hover:text-black">Go Back</button></form>
 </body>
 </html>
