--- a/views/Add-Notes.ejs
+++ b/views/Add-Notes.ejs
@@ -12,7 +12,7 @@
         <input type="text" name="title" class=" indent-2 h-10 text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 dark:bg-gray-800  dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="ex. What to do">
 
         <label for="content" class="block mb-2 text-lg font-medium text-gray-900 dark:text-white">Content:</label>
-        <textarea id="content" rows="4" class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500  dark:bg-gray-800 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Write your thoughts here..."></textarea>
+        <textarea id="content" name="content" rows="4" class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500  dark:bg-gray-800 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Write your thoughts here..." required></textarea>
         <div class="flex justify-center">
             <button type="submit" class="h-10 w-28 rounded-lg bg-gray-900 hover:bg-slate-100 hover:text-black">Done</button>
         </div>
