--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,8 +13,16 @@
             <button class=" w-24 h-11 border-2  bg-slate-600 rounded-lg transition ease-in-out delay-150  hover:-translate-y-1 hover:scale-105 duration-300">Add</button>
         </form>
     </nav>
+    <% console.log(notes) %>
     <div class="container w-full h-screen bg-slate-500 text-white flex items-center justify-center">
         <div class="content border-2 border-pink-200 w-11/12 h-screen flex flex-wrap items-start justify-start gap-x-14 gap-y-4 p-8">
+            <% notes.forEach(note => { %>
+                <div class="content border-2 border-white-500 w-72 h-72">
+                    <h4><%= note.title %></h4>
+                    <p><%= note.content %></p>
+                </div>
+            <% }) %>
+<!-- 
             <div class="content border-2 border-white-500 w-72 h-72">
                 <h4>Title</h4>
                 <p>Content</p>
@@ -39,7 +47,7 @@
             <div class="content border-2 border-white-500 w-72 h-72">
                 <h4>Title</h4>
                 <p>Content</p>
-            </div>
+            </div> -->
         </div>
     </div>
 </body>
