Added style and svg on edit button

--- a/public/src/output.css
+++ b/public/src/output.css
@@ -612,6 +612,10 @@ video {
   float: inline-start;
 }
 
+.-m-10 {
+  margin: -2.5rem;
+}
+
 .mb-2 {
   margin-bottom: 0.5rem;
 }
@@ -622,6 +626,30 @@ video {
 
 .ml-3 {
   margin-left: 0.75rem;
+}
+
+.-mt-8 {
+  margin-top: -2rem;
+}
+
+.mr-2 {
+  margin-right: 0.5rem;
+}
+
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+
+.mb-1\.5 {
+  margin-bottom: 0.375rem;
+}
+
+.mr-1 {
+  margin-right: 0.25rem;
+}
+
+.mr-1\.5 {
+  margin-right: 0.375rem;
 }
 
 .block {
@@ -651,6 +679,21 @@ video {
 .size-5 {
   width: 1.25rem;
   height: 1.25rem;
+}
+
+.size-6 {
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
+.size-9 {
+  width: 2.25rem;
+  height: 2.25rem;
+}
+
+.size-7 {
+  width: 1.75rem;
+  height: 1.75rem;
 }
 
 .h-10 {
@@ -739,6 +782,10 @@ video {
   height: 100svh;
 }
 
+.h-12 {
+  height: 3rem;
+}
+
 .w-10 {
   width: 2.5rem;
 }
@@ -802,6 +849,10 @@ video {
 
 .w-screen {
   width: 100vw;
+}
+
+.w-12 {
+  width: 3rem;
 }
 
 .border-collapse {
@@ -1017,6 +1068,10 @@ video {
   border-radius: 0.75rem;
 }
 
+.rounded-full {
+  border-radius: 9999px;
+}
+
 .rounded-s-lg {
   border-start-start-radius: 0.5rem;
   border-end-start-radius: 0.5rem;
@@ -1174,6 +1229,19 @@ video {
   background-color: rgb(248 250 252 / var(--tw-bg-opacity));
 }
 
+.bg-slate-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 41 59 / var(--tw-bg-opacity));
+}
+
+.stroke-2 {
+  stroke-width: 2;
+}
+
+.stroke-1 {
+  stroke-width: 1;
+}
+
 .p-10 {
   padding: 2.5rem;
 }
@@ -1216,6 +1284,16 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
 .pl-5 {
   padding-left: 1.25rem;
 }
@@ -1248,6 +1326,10 @@ video {
   text-align: center;
 }
 
+.text-justify {
+  text-align: justify;
+}
+
 .indent-2 {
   text-indent: 0.5rem;
 }
@@ -1258,6 +1340,10 @@ video {
 
 .indent-6 {
   text-indent: 1.5rem;
+}
+
+.indent-5 {
+  text-indent: 1.25rem;
 }
 
 .align-middle {
