--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="/src/output.css">
 </head>
 <body class="bg-gray-700 flex flex-col justify-center items-center h-screen">
-    <%# console.log(editnotes[0].content) %>
-    <form action="/postNotes" method="post" class="flex flex-col gap-5 justify-start w-96 text-gray-50 mb-2">
+    <%# console.log(editnotes[0].notesid) %>
+    <form action="/editedNotes" method="post" class="flex flex-col gap-5 justify-start w-96 text-gray-50 mb-2">
+        <input type="hidden" name="id" value="<%= editnotes[0].notesid %>">
         <label for="title" class="block mb-2 text-lg font-medium text-gray-900 dark:text-white">Title: </label>
         <input type="text" name="title" class=" indent-2 h-10
         text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 dark:bg-gray-800 
@@ -21,8 +22,6 @@
         dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Write your thoughts here..."  required>
             <%= editnotes[0].content %>
         </textarea>
-
-        <input type="hidden" name="<%= editnotes[0].notesid %>">
         <div class="flex justify-center">
             <button type="submit" class="h-10 w-28 rounded-lg bg-gray-900 hover:bg-slate-100 hover:text-black">Done</button>
         </div>
